# RiftApp

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  desktop.yml  frontend.yml
app/: .gitignore  Cargo.toml  package-lock.json  package.json  tauri.conf.json  tsconfig.json
app/capabilities/: default.json
app/icons/: icon.icns
app/nsis/: installer-hooks.nsi  installer-template.nsi
app/scripts/: generate-icon.cjs  prepare-icons.cjs  write-ico.mjs
app/src/: lib.rs  main.ts  preload.ts
backend/: .env.example  Caddyfile  Dockerfile  compose.yml  go.mod  go.sum  livekit.yaml
backend/cmd/riftapp/: main.go
backend/cmd/riptide/: main.go
backend/internal/admin/: models.go  repo.go  service.go
backend/internal/api/: admin_auth_handler.go  admin_handler.go  auth_handler.go  category_handler.go  developer_handler.go  discord_compat_gateway.go  discord_compat_handler.go  discord_import.go  dm_handler.go  friend_handler.go  helpers.go  hub_bot_handler.go  hub_customization_handler.go  hub_handler.go  hub_moderation_handler.go  message_handler.go  notif_handler.go  report_handler.go  router.go  stream_handler.go  unfurl_handler.go  upload_handler.go  user_handler.go  voice_handler.go  ws_handler.go
backend/internal/database/: db.go  (+1 more)
docs/: BotDevelopment.md
frontend/: .npmrc  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
frontend/functions/: [[path]].js
frontend/public/: _headers  _redirects
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+243 files in other folders)
