[package]
name = "rift-desktop"
version = "0.1.0"
description = "Rift – Voice & text for your crew"
authors = ["Skila", "lovely"]
license = "MIT"
repository = "https://github.com/Skila1/RiftApp"
homepage = "https://riftapp.io"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
